Style: Correcting the left alignment

--- a/src/app/components/animes-list/animes-list.component.scss
+++ b/src/app/components/animes-list/animes-list.component.scss
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   column-gap: 20px;
   row-gap: 40px;
   align-items: stretch;
